--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
-    <script src="./js/01-varibles.js"></script>
+    <!-- <script src="./js/01-varibles.js"></script> -->
+     <!-- <script src="./js/02-variables.js"></script> -->
+     <!-- <script src="./js/03-variables.js"></script> -->
+     <!-- <script src="./js/04-variables.js"></script> -->
+     <script src="./js/05-variables.js"></script>
 </body>
 </html>
