--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
      <!-- <script src="./js/02-variables.js"></script> -->
      <!-- <script src="./js/03-variables.js"></script> -->
      <!-- <script src="./js/04-variables.js"></script> -->
-     <script src="./js/05-variables.js"></script>
+     <!-- <script src="./js/05-variables.js"></script> -->
+     <!-- <script src="./js/06-variables.js"></script> -->
+     <!-- <script src="./js/07-variables.js"></script> -->
+     <!-- <script src="./js/08-variables.js"></script> -->
+     <!-- <script src="./js/09-variables.js"></script> -->
+     <script src="./js/10-variables.js"></script>
 </body>
 </html>
